manifests/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: client
spec:
  rules:
    - host: client-dhbw-exercise-1.2886795283-80-kota02.environments.katacoda.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: client
              servicePort: 3000
